--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "aoc2023"
 version = "0.1.0"
 edition = "2021"
 
+default-run = "day1"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "utils"
+path = "src/utils.rs"
+
+[[bin]]
+name = "day1"
+path = "src/bin/day1.rs"
 
 [dependencies]
