--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "aoc2023"
 version = "0.1.0"
 edition = "2021"
 
-default-run = "day1"
+default-run = "day1_1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +12,7 @@ name = "utils"
 path = "src/utils.rs"
 
 [[bin]]
-name = "day1"
-path = "src/bin/day1.rs"
+name = "day1_1"
+path = "src/bin/day1_1.rs"
 
 [dependencies]
