--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "aoc2023"
 version = "0.1.0"
 edition = "2021"
 
-default-run = "day1_1"
+default-run = "day1_2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,5 +14,9 @@ path = "src/utils.rs"
 [[bin]]
 name = "day1_1"
 path = "src/bin/day1_1.rs"
+
+[[bin]]
+name = "day1_2"
+path = "src/bin/day1_2.rs"
 
 [dependencies]
